--- a/app/src/main/res/layout/activity_bottom_tab.xml
+++ b/app/src/main/res/layout/activity_bottom_tab.xml
@@ -4,22 +4,24 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <FrameLayout
-        android:id="@+id/home_container"
-        android:layout_width="match_parent"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpage"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:background="@android:color/white"
         >
-    </FrameLayout>
+    </android.support.v4.view.ViewPager>
     <View android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:alpha="0.6"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/holo_green_dark"
         />
     <android.support.design.widget.TabLayout
         android:id="@+id/bottom_tab_layout"
         android:layout_width="match_parent"
         app:tabIndicatorHeight="0dp"
+        android:background="@android:color/white"
         app:tabSelectedTextColor="@android:color/black"
         app:tabTextColor="@android:color/darker_gray"
         android:layout_height="50dp">
