--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -1,14 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FavoriteFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    tools:context=".fragments.TrendingFragment"
+    android:orientation="vertical"
+    >
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="?actionBarSize"
+        android:id="@+id/favorite_toolbar"
+        android:background="?selected_color"
+        >
 
-</FrameLayout>
+    </android.support.v7.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            >
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/trend_favorite_black"
+            android:text="@string/trend"
+            android:textColor="@android:color/black"
+            android:gravity="center"
+            android:textSize="24sp"
+            />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/trend_favorite_color"
+                    android:text="@string/trend"
+                    android:gravity="center"
+                    android:textColor="?selected_color"
+                    android:textSize="24sp"
+                    />
+            </FrameLayout>
+    </LinearLayout>
+        <View android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:alpha="0.6"
+            android:background="@android:color/darker_gray"
+            />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            >
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/popular_favorite_black"
+            android:gravity="center"
+            android:text="@string/popular"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/popular_favorite_color"
+                    android:gravity="center"
+                    android:textColor="?selected_color"
+                    android:text="@string/popular"
+                    android:textSize="24sp"
+                    />
+            </FrameLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <View android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:alpha="0.6"
+        android:background="@android:color/darker_gray"
+        />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/show_favorite"
+        >
+
+    </android.support.v7.widget.RecyclerView>
+</LinearLayout>
