--- a/app/src/main/res/layout/item_trending.xml
+++ b/app/src/main/res/layout/item_trending.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     >
     <android.support.v7.widget.CardView
@@ -11,23 +11,64 @@
         android:layout_gravity="center"
         card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="12dp"
-        card_view:cardBackgroundColor="#e2e0e0"
+        card_view:cardBackgroundColor="@android:color/white"
         >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
-    <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/trending_title"
-    />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/trending_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+        <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="9"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/trending_title"
+            android:textColor="@android:color/black"
         />
-</LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.6dp"
+                android:background="?selected_color"
+                android:alpha="0.6"/>
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/trending_content"
+            android:textColor="@android:color/black"
+        />
+        </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                >
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:scaleType="fitStart"
+                        android:layout_height="35dp"
+                        android:src="@drawable/star"
+                        android:id="@+id/star"
+                        android:layout_gravity="center"
+                        />
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:tint="?selected_color"
+                        android:id="@+id/selected_color"
+                        android:scaleType="fitStart"
+                        android:src="@drawable/star"
+                        android:layout_gravity="center"
+                        />
+                </FrameLayout>
+            </LinearLayout>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
